add_subdirectory(led/led)
add_subdirectory(proc)
add_subdirectory(i2c)
add_subdirectory(common)
#add_subdirectory(inc)
add_subdirectory(timer)
add_subdirectory(atomic)
add_subdirectory(spinlock)
add_subdirectory(semaphore)
add_subdirectory(mutex)
add_subdirectory(int)
add_subdirectory(blockio)
add_subdirectory(noblockio)
add_subdirectory(asyncnoti)
add_subdirectory(platform)
add_subdirectory(platform_dts)
add_subdirectory(misc)
add_subdirectory(input)
add_subdirectory(rtc)
add_subdirectory(spi)